--- a/mud/src/main/java/fr/univ_orleans/iut45/mud/IHM/src/PageParticipant.fxml
+++ b/mud/src/main/java/fr/univ_orleans/iut45/mud/IHM/src/PageParticipant.fxml
@@ -3,12 +3,9 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
-<?import javafx.scene.control.SplitMenuButton?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -23,53 +20,45 @@
    <center>
       <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
-            <HBox prefHeight="44.0" prefWidth="590.0">
+            <HBox alignment="CENTER" prefHeight="44.0" prefWidth="590.0">
                <children>
-                  <TextField fx:id="rechercheNom" prefHeight="24.0" prefWidth="202.0" promptText="Recherche par Nom">
+                  <TextField fx:id="rechercheNom" prefHeight="24.0" promptText="Rechercher athlète">
                      <HBox.margin>
                         <Insets bottom="10.0" left="10.0" top="10.0" />
                      </HBox.margin>
                   </TextField>
-                  <ComboBox fx:id="trie" accessibleRole="CHECK_MENU_ITEM" prefWidth="150.0" promptText="Trier par">
-                     <opaqueInsets>
-                        <Insets />
-                     </opaqueInsets>
+                  <TextField fx:id="rechercheNom1" prefHeight="24.0" promptText="Recherche équipe">
                      <HBox.margin>
-                        <Insets left="240.0" top="10.0" />
+                        <Insets bottom="10.0" left="10.0" top="10.0" />
                      </HBox.margin>
-                  </ComboBox>
+                  </TextField>
                </children>
             </HBox>
             <ScrollPane fx:id="scrollParticipant" fitToWidth="true" hbarPolicy="NEVER" VBox.vgrow="ALWAYS">
                <content>
                   <GridPane fx:id="classementPays" alignment="CENTER" gridLinesVisible="true">
                      <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="165.0" minWidth="10.0" prefWidth="112.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="165.0" minWidth="10.0" prefWidth="102.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="158.0" minWidth="10.0" prefWidth="58.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="173.0" minWidth="10.0" prefWidth="154.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="158.0" minWidth="10.0" prefWidth="87.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="158.0" minWidth="10.0" prefWidth="93.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="158.0" minWidth="10.0" prefWidth="82.0" />
+                        <ColumnConstraints hgrow="ALWAYS" maxWidth="240.0" minWidth="10.0" prefWidth="180.0" />
+                        <ColumnConstraints hgrow="NEVER" maxWidth="240.0" minWidth="10.0" prefWidth="125.0" />
+                        <ColumnConstraints hgrow="NEVER" maxWidth="240.0" minWidth="10.0" prefWidth="125.0" />
+                        <ColumnConstraints hgrow="ALWAYS" maxWidth="240.0" minWidth="10.0" prefWidth="180.0" />
+                        <ColumnConstraints hgrow="NEVER" maxWidth="240.0" minWidth="10.0" prefWidth="125.0" />
+                        <ColumnConstraints hgrow="NEVER" maxWidth="240.0" minWidth="10.0" prefWidth="125.0" />
                      </columnConstraints>
                      <rowConstraints>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
                      </rowConstraints>
                      <children>
-                        <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="52.0" prefWidth="162.0" text="Nom" />
-                        <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="47.0" prefWidth="138.0" text="Prénom" wrapText="true" GridPane.columnIndex="1" />
-                        <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="48.0" prefWidth="108.0" text="Sexe" textAlignment="CENTER" wrapText="true" GridPane.columnIndex="2" />
-                        <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="48.0" prefWidth="108.0" text="Pays" textAlignment="CENTER" wrapText="true" GridPane.columnIndex="3" />
-                        <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="46.0" prefWidth="113.0" text="Force" textAlignment="CENTER" wrapText="true" GridPane.columnIndex="4" />
-                        <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="46.0" prefWidth="113.0" text="Endurance" textAlignment="CENTER" GridPane.columnIndex="5" />
-                        <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="46.0" prefWidth="113.0" text="Agilité" textAlignment="CENTER" GridPane.columnIndex="6" />
+                        <Label text="Athlètes" textAlignment="CENTER" wrapText="true" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                        <Label text="Equipes" textAlignment="CENTER" wrapText="true" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                        <Label text="Sexe de athlète" textAlignment="CENTER" wrapText="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                        <Label text="Sexe de l'équipe" textAlignment="CENTER" wrapText="true" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                        <Label text="Pays de l'athlète" textAlignment="CENTER" wrapText="true" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                        <Label text="Pays de l'équipe" textAlignment="CENTER" wrapText="true" GridPane.columnIndex="5" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
                      </children>
+                     <padding>
+                        <Insets left="10.0" />
+                     </padding>
                   </GridPane>
                </content>
             </ScrollPane>
@@ -136,72 +125,6 @@
       <HBox prefHeight="400.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
             <VBox prefHeight="350.0" prefWidth="215.0">
-               <children>
-                  <SplitMenuButton fx:id="menuHommeEpreuve" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" prefHeight="25.0" prefWidth="200.0" text="Homme">
-                    <items>
-                        <MenuItem mnemonicParsing="false" text="Natation">
-                           <graphic>
-                              <SplitMenuButton fx:id="menuNatationH" mnemonicParsing="false" text="Natation" />
-                           </graphic>
-                        </MenuItem>
-                      <MenuItem mnemonicParsing="false" text="Handball">
-                           <graphic>
-                              <Button fx:id="btnHandballH" mnemonicParsing="false" text="Hanball" />
-                           </graphic>
-                        </MenuItem>
-                        <MenuItem mnemonicParsing="false" text="Volleyball">
-                           <graphic>
-                              <Button fx:id="btnVolleyballH" mnemonicParsing="false" text="Volleyball" />
-                           </graphic>
-                        </MenuItem>
-                        <MenuItem mnemonicParsing="false" text="Escrime">
-                           <graphic>
-                              <SplitMenuButton fx:id="menuEscrimeH" mnemonicParsing="false" text="Escrime" />
-                           </graphic>
-                        </MenuItem>
-                        <MenuItem mnemonicParsing="false" text="Athlétisme">
-                           <graphic>
-                              <SplitMenuButton fx:id="menuAthletismeH" mnemonicParsing="false" text="Athlétisme" />
-                           </graphic>
-                        </MenuItem>
-                    </items>
-                     <VBox.margin>
-                        <Insets />
-                     </VBox.margin>
-                  </SplitMenuButton>
-                  <SplitMenuButton fx:id="menuFemmeEpreuve" layoutX="11.0" layoutY="11.0" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" prefHeight="25.0" prefWidth="200.0" text="Femme">
-                     <items>
-                        <MenuItem mnemonicParsing="false" text="Natation">
-                           <graphic>
-                              <SplitMenuButton fx:id="menuNatationF" mnemonicParsing="false" text="Natation" />
-                           </graphic>
-                        </MenuItem>
-                        <MenuItem mnemonicParsing="false" text="Handball">
-                           <graphic>
-                              <Button fx:id="btnHandballF" mnemonicParsing="false" text="Hanball" />
-                           </graphic>
-                        </MenuItem>
-                        <MenuItem mnemonicParsing="false" text="Volleyball">
-                           <graphic>
-                              <Button fx:id="btnVolleyballF" mnemonicParsing="false" text="Volleyball" />
-                           </graphic>
-                        </MenuItem>
-                        <MenuItem mnemonicParsing="false" text="Escrime">
-                           <graphic>
-                              <SplitMenuButton fx:id="menuEscrimeF" mnemonicParsing="false" text="Escrime" />
-                           </graphic>
-                        </MenuItem>
-                        <MenuItem mnemonicParsing="false" text="Athlétisme">
-                           <graphic>
-                              <SplitMenuButton fx:id="menuAthletismeF" mnemonicParsing="false" text="Athlétisme" />
-                           </graphic>
-                        </MenuItem>
-                     </items>
-                     <VBox.margin>
-                        <Insets />
-                     </VBox.margin>
-                  </SplitMenuButton>
-               </children>
                <HBox.margin>
                   <Insets right="5.0" top="10.0" />
                </HBox.margin>
