--- a/mud/src/main/java/fr/univ_orleans/iut45/mud/IHM/src/PageParticipant.fxml
+++ b/mud/src/main/java/fr/univ_orleans/iut45/mud/IHM/src/PageParticipant.fxml
@@ -3,17 +3,15 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="890.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
@@ -22,12 +20,12 @@
          <children>
             <HBox alignment="CENTER_LEFT" prefHeight="44.0" VBox.vgrow="NEVER">
                <children>
-                  <TextField fx:id="rechercheAthlete" onKeyReleased="#handleRechercheA" prefHeight="24.0" promptText="Rechercher athlète" HBox.hgrow="SOMETIMES">
+                  <TextField fx:id="rechercheAthlete" onKeyReleased="#handleRechercheA" prefHeight="24.0" promptText="Rechercher athlète" HBox.hgrow="ALWAYS">
                      <HBox.margin>
-                        <Insets bottom="10.0" left="10.0" top="10.0" />
+                        <Insets bottom="10.0" top="10.0" />
                      </HBox.margin>
                   </TextField>
-                  <TextField fx:id="rechercheEquipe" onKeyReleased="#handleRechercheE" prefHeight="24.0" promptText="Recherche équipe" HBox.hgrow="SOMETIMES">
+                  <TextField fx:id="rechercheEquipe" onKeyReleased="#handleRechercheE" prefHeight="24.0" promptText="Recherche équipe" HBox.hgrow="ALWAYS">
                      <HBox.margin>
                         <Insets bottom="10.0" left="10.0" top="10.0" />
                      </HBox.margin>
@@ -36,41 +34,22 @@
             </HBox>
             <ScrollPane fx:id="scrollParticipant" fitToWidth="true" hbarPolicy="NEVER" VBox.vgrow="ALWAYS">
                <content>
-                  <HBox prefHeight="80.0" prefWidth="200.0">
+                  <HBox prefHeight="80.0" prefWidth="200.0" spacing="10.0">
                      <children>
-                        <GridPane fx:id="gridAthlete" alignment="CENTER" gridLinesVisible="true" HBox.hgrow="ALWAYS">
-                          <columnConstraints>
-                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="180.0" />
-                            <ColumnConstraints hgrow="NEVER" minWidth="10.0" prefWidth="100.0" />
-                              <ColumnConstraints hgrow="NEVER" minWidth="10.0" prefWidth="125.0" />
-                          </columnConstraints>
-                          <rowConstraints>
-                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                          </rowConstraints>
-                           <children>
-                              <Label text="Athlètes" textAlignment="CENTER" wrapText="true" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-                              <Label text="Sexe de athlète" textAlignment="CENTER" wrapText="true" GridPane.columnIndex="1" />
-                              <Label text="Pays de l'athlète" textAlignment="CENTER" wrapText="true" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-                           </children>
-                        </GridPane>
-                        <GridPane fx:id="gridEquipe" alignment="CENTER" gridLinesVisible="true" HBox.hgrow="ALWAYS">
-                           <columnConstraints>
-                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="180.0" />
-                              <ColumnConstraints hgrow="NEVER" minWidth="10.0" prefWidth="100.0" />
-                              <ColumnConstraints hgrow="NEVER" minWidth="10.0" prefWidth="125.0" />
-                           </columnConstraints>
-                           <rowConstraints>
-                              <RowConstraints minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
-                           </rowConstraints>
-                           <children>
-                              <Label text="Equipes" textAlignment="CENTER" wrapText="true" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-                              <Label text="Sexe de l'équipe" textAlignment="CENTER" wrapText="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-                              <Label text="Pays de l'équipe" textAlignment="CENTER" wrapText="true" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-                           </children>
-                           <padding>
-                              <Insets left="10.0" />
-                           </padding>
-                        </GridPane>
+                        <TableView fx:id="tableA" HBox.hgrow="ALWAYS">
+                          <columns>
+                            <TableColumn fx:id="colonneA" editable="false" maxWidth="1.7976931348623157E308" prefWidth="175.0" resizable="false" text="Athlète" />
+                            <TableColumn fx:id="colonneSexeA" editable="false" prefWidth="65.0" resizable="false" text="Sexe" />
+                              <TableColumn fx:id="colonnePaysA" editable="false" maxWidth="1.7976931348623157E308" prefWidth="100.0" resizable="false" text="Pays" />
+                          </columns>
+                        </TableView>
+                        <TableView fx:id="tableE" HBox.hgrow="ALWAYS">
+                          <columns>
+                            <TableColumn fx:id="colonneEquipe" editable="false" maxWidth="1.7976931348623157E308" prefWidth="175.0" resizable="false" text="Equipe" />
+                            <TableColumn fx:id="colonneSexeE" editable="false" prefWidth="65.0" resizable="false" text="Sexe" />
+                              <TableColumn fx:id="colonnePaysE" editable="false" maxWidth="1.7976931348623157E308" prefWidth="100.0" resizable="false" text="Pays" />
+                          </columns>
+                        </TableView>
                      </children>
                   </HBox>
                </content>
