--- a/mud/src/main/java/fr/univ_orleans/iut45/mud/IHM/src/PageCompetition.fxml
+++ b/mud/src/main/java/fr/univ_orleans/iut45/mud/IHM/src/PageCompetition.fxml
@@ -53,7 +53,12 @@
                   <Font size="20.0" />
                </font>
             </Label>
-            <ScrollPane fx:id="liEpreuve" prefHeight="200.0" prefWidth="200.0" />
+            <ScrollPane fx:id="liEpreuve" prefHeight="138.0" prefWidth="690.0" />
+            <Button fx:id="ajoutEpreuve" mnemonicParsing="false" onAction="#handleAjoutEpreuve" text="Ajouter une épreuve">
+               <VBox.margin>
+                  <Insets left="480.0" top="10.0" />
+               </VBox.margin>
+            </Button>
          </children>
          <BorderPane.margin>
             <Insets />
