--- a/mud/src/main/java/fr/univ_orleans/iut45/mud/IHM/src/PageAjoutEpreuve.fxml
+++ b/mud/src/main/java/fr/univ_orleans/iut45/mud/IHM/src/PageAjoutEpreuve.fxml
@@ -12,9 +12,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="287.0" prefWidth="369.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="287.0" prefWidth="369.0" style="-fx-background-color: lite;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="238.0" prefWidth="350.0" style="-fx-border-color: black; -fx-border-width: 3;">
+      <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="238.0" prefWidth="350.0" style="-fx-border-color: black; -fx-border-width: 3; -fx-background-color: white;">
          <children>
             <HBox maxHeight="1.7976931348623157E308" prefHeight="100.0" prefWidth="200.0">
                <children>
